Fixed issue with overflowing divs

--- a/style.css
+++ b/style.css
@@ -45,13 +45,15 @@
 }
   .col-10 {width: 83.33%;}
   .col-11 {width: 91.66%;}
-  .col-12 {
-    width: 100%;
+  .col-12 {width: 100%;}
+
+.footer {
     display: flex;
     background-color: #DD4A48;
     color: #F5EEDC;
     justify-content: space-around;
     margin: 3%;
+
 }
 
   p {background-color: inherit;}
@@ -70,12 +72,18 @@
   }
   
   .row {
+    position: relative;
     margin-left: 50px;
     margin-right: 50px;
-    height: 100vh;
+    height: auto;
   }
 
-  .col-12 > * {
+  .site-body {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .footer > * {
     background-color: #DD4A48;
   }
 
